--- a/guides/index.html
+++ b/guides/index.html
@@ -4,21 +4,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Punk Code</title>
+    <title>DIY Guides | Punk Code</title>
   </head>
-  <body>
-    <header>
-  <nav>
-    <a href="/">Punk Code</a>
-    
-      <a href="/manifesto/">Manifesto</a>
-      <a href="/guides/">DIY Guides</a>
-      <a href="/choices/">Design Choices</a>
+  <body class="bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
+    <header class="bg-penguin-orange border-b-2 border-penguin-black dark:border-penguin-tan">
+  <nav class="text-center py-4">
+    <a href="/" class="logo">Punk Code</a>
   </nav>
 </header>
-    <main>
+    <main class="container mx-auto p-4 flex flex-col">
   <h1>DIY Guides</h1>
-  
+  <p>Short videos with practical tips for ethical and sustainable web development. Creating a better product, happier people, and peace on Earth. Why isn't this working?</p>
+<section>
+<ul>
+<li>
+<p><a href="/guides/the-punk-code/">The Punk Code</a></p>
+</li>
+<li>
+<p><a href="/guides/punk-code/">punk-code</a></p>
+</li>
+<li>
+<p><a href="/guides/code-slow/">Code SLOW</a></p>
+</li>
+</ul>
+</section>
 </main>
   </body>
 </html>
