--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -4,21 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Punk Code</title>
+    <title>Punk Code Manifesto | Punk Code</title>
   </head>
-  <body>
-    <header>
-  <nav>
-    <a href="/">Punk Code</a>
-    
-      <a href="/manifesto/">Manifesto</a>
-      <a href="/guides/">DIY Guides</a>
-      <a href="/choices/">Design Choices</a>
+  <body class="bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
+    <header class="bg-penguin-orange border-b-2 border-penguin-black dark:border-penguin-tan">
+  <nav class="text-center py-4">
+    <a href="/" class="logo">Punk Code</a>
   </nav>
 </header>
-    <main>
+    <main class="container mx-auto p-4 flex flex-col">
   <h1>Punk Code Manifesto</h1>
-  
+  <p>I follow a <a href="#thepunkcode">Punk Code</a> to write <a href="#punk-code">punk-code</a>. Also, I am a believer in the Slow Movement and a proponent of <a href="#codeSLOW">Code SLOW</a>.</p>
+<article id="thepunkcode">
+  <h2>The Punk Code</h2>
+  This is The Punk Code.
+</article>
+<article id="punk-code">
+  <h2>&lt;punk-code&gt;</h2>
+  punk-code
+</article>
+<article id="codeSLOW">
+  <h2>Code SLOW</h2>
+  Sustainable. Local. Organic. Whole.
+</article>
 </main>
   </body>
 </html>
