--- a/guides/index.html
+++ b/guides/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bork">
     <link rel="stylesheet" href="/style.css">
     <title>DIY Guides | Punk Code</title>
   </head>
@@ -17,15 +18,7 @@
   <p>Short videos with practical tips for ethical and sustainable web development. Creating a better product, happier people, and peace on Earth. Why isn't this working?</p>
 <section>
 <ul>
-<li>
-<p><a href="/guides/the-punk-code/">The Punk Code</a></p>
-</li>
-<li>
-<p><a href="/guides/punk-code/">punk-code</a></p>
-</li>
-<li>
-<p><a href="/guides/code-slow/">Code SLOW</a></p>
-</li>
+<li><a href="/guides/test-guide/">TEST GUIDE</a></li>
 </ul>
 </section>
 </main>
