--- a/guides/test-guide/index.html
+++ b/guides/test-guide/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="/style.css">
-    <title>Code SLOW | Punk Code</title>
+    <title>TEST GUIDE | Punk Code</title>
   </head>
   <body class="bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
     <header class="bg-penguin-orange border-b-2 border-penguin-black dark:border-penguin-tan">
@@ -13,7 +14,7 @@
   </nav>
 </header>
     <main class="container mx-auto p-4 flex flex-col">
-  <h1>Code SLOW</h1>
+  <h1>TEST GUIDE</h1>
   
 </main>
   </body>
