--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bork">
     <link rel="stylesheet" href="/style.css">
     <title>Punk Code Manifesto | Punk Code</title>
   </head>
@@ -14,7 +15,7 @@
 </header>
     <main class="container mx-auto p-4 flex flex-col">
   <h1>Punk Code Manifesto</h1>
-  <p>I follow a <a href="#thepunkcode">Punk Code</a> to write <a href="#punk-code">punk-code</a>. Also, I am a believer in the Slow Movement and a proponent of <a href="#codeSLOW">Code SLOW</a>.</p>
+  <p>I follow a <a href="#thepunkcode">Punk Code</a> to write <a href="#punk-code">&lt;punk-code&gt;</a>. Also, I am a believer in the <a href="https://www.slowmovement.com/">Slow Movement</a> and a proponent of <a href="#codeSLOW">Code SLOW</a>.</p>
 <article id="thepunkcode">
   <h2>The Punk Code</h2>
   This is The Punk Code.
