--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bork">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Punk Code Manifesto | Punk Code</title>
   </head>
   <body class="bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
