--- a/404.html
+++ b/404.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="/styles/style.css">
     <title>Oops! Not Found | Punk Code</title>
   </head>
-  <body class="bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
-    <header class="bg-penguin-orange border-b-2 border-penguin-black dark:border-penguin-tan">
+  <body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
+    <header class="penguin-header">
   <nav class="text-center py-4">
-    <a href="/" class="logo">Punk Code</a>
+    <a href="/" class="with-stroke text-5xl md:text-6xl lg:text-7xl">Punk Code</a>
   </nav>
 </header>
-    <main class="container mx-auto p-4 flex flex-col">
-        <p>This is where you should tell the user how to find their content.</p>
+    <main class="container mx-auto p-4 flex-grow">
+  <h1>Oops! Not Found</h1>
+  <p>This is where you should tell the user how to find their content.</p>
 
-      </main>
+</main>
+    <footer class="bg-penguin-orange border-t-2 border-penguin-black dark:border-penguin-tan">
+  <nav class="flex flex-row justify-end">
+    <p class="m-1 mr-auto p-1">Copyright 2021 Christoffer Lagerstedt</p>
+    <a href="/" class="m-1 p-1">GitHub</a>
+    <a href="/" class="m-1 p-1">LinkedIn</a>
+  </nav>
+</footer>
   </body>
 </html>
