--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="/styles/style.css">
     <title>Punk Code Manifesto | Punk Code</title>
   </head>
-  <body class="bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
-    <header class="bg-penguin-orange border-b-2 border-penguin-black dark:border-penguin-tan">
+  <body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
+    <header class="penguin-header">
   <nav class="text-center py-4">
-    <a href="/" class="logo">Punk Code</a>
+    <a href="/" class="with-stroke text-5xl md:text-6xl lg:text-7xl">Punk Code</a>
   </nav>
 </header>
-    <main class="container mx-auto p-4 flex flex-col">
+    <main class="container mx-auto p-4 flex-grow">
   <h1>Punk Code Manifesto</h1>
   <p>I follow a <a href="#thepunkcode">Punk Code</a> to write <a href="#punk-code">&lt;punk-code&gt;</a>. Also, I am a believer in the <a href="https://www.slowmovement.com/">Slow Movement</a> and a proponent of <a href="#codeSLOW">Code SLOW</a>.</p>
 <article id="thepunkcode">
@@ -29,5 +29,12 @@
   Sustainable. Local. Organic. Whole.
 </article>
 </main>
+    <footer class="bg-penguin-orange border-t-2 border-penguin-black dark:border-penguin-tan">
+  <nav class="flex flex-row justify-end">
+    <p class="m-1 mr-auto p-1">Copyright 2021 Christoffer Lagerstedt</p>
+    <a href="/" class="m-1 p-1">GitHub</a>
+    <a href="/" class="m-1 p-1">LinkedIn</a>
+  </nav>
+</footer>
   </body>
 </html>
