--- a/404.html
+++ b/404.html
@@ -1,29 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bork">
-    <link rel="stylesheet" href="/styles/style.css">
-    <title>Oops! Not Found | Punk Code</title>
-  </head>
-  <body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
-    <header class="penguin-header">
-  <nav class="text-center py-4">
-    <a href="/" class="with-stroke text-5xl md:text-6xl lg:text-7xl">Punk Code</a>
-  </nav>
-</header>
-    <main class="container mx-auto p-4 flex-grow">
-  <h1>Oops! Not Found</h1>
-  <p>This is where you should tell the user how to find their content.</p>
-
-</main>
-    <footer class="bg-penguin-orange border-t-2 border-penguin-black dark:border-penguin-tan">
-  <nav class="flex flex-row justify-end">
-    <p class="m-1 mr-auto p-1">Copyright 2021 Christoffer Lagerstedt</p>
-    <a href="/" class="m-1 p-1">GitHub</a>
-    <a href="/" class="m-1 p-1">LinkedIn</a>
-  </nav>
-</footer>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Bork"><link rel="stylesheet" href="/styles/style.css"><title>Oops! Not Found | Punk Code</title></head><body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan"><header class="penguin-header"><nav class="text-center py-4"><a href="/" class="with-stroke text-5xl md:text-6xl lg:text-7xl">Punk Code</a></nav></header><main class="container mx-auto p-4 flex-grow"><h1>Oops! Not Found</h1><p>This is where you should tell the user how to find their content.</p></main><footer class="bg-penguin-orange border-t-2 border-penguin-black dark:border-penguin-tan"><nav class="flex flex-row justify-end"><p class="m-1 mr-auto p-1">Copyright 2021 Christoffer Lagerstedt</p><a href="/" class="m-1 p-1">GitHub</a> <a href="/" class="m-1 p-1">LinkedIn</a></nav></footer></body></html>
