--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -1,40 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bork">
-    <link rel="stylesheet" href="/styles/style.css">
-    <title>Punk Code Manifesto | Punk Code</title>
-  </head>
-  <body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan">
-    <header class="penguin-header">
-  <nav class="text-center py-4">
-    <a href="/" class="with-stroke text-5xl md:text-6xl lg:text-7xl">Punk Code</a>
-  </nav>
-</header>
-    <main class="container mx-auto p-4 flex-grow">
-  <h1>Punk Code Manifesto</h1>
-  <p>I follow a <a href="#thepunkcode">Punk Code</a> to write <a href="#punk-code">&lt;punk-code&gt;</a>. Also, I am a believer in the <a href="https://www.slowmovement.com/">Slow Movement</a> and a proponent of <a href="#codeSLOW">Code SLOW</a>.</p>
-<article id="thepunkcode">
-  <h2>The Punk Code</h2>
-  This is The Punk Code.
-</article>
-<article id="punk-code">
-  <h2>&lt;punk-code&gt;</h2>
-  punk-code
-</article>
-<article id="codeSLOW">
-  <h2>Code SLOW</h2>
-  Sustainable. Local. Organic. Whole.
-</article>
-</main>
-    <footer class="bg-penguin-orange border-t-2 border-penguin-black dark:border-penguin-tan">
-  <nav class="flex flex-row justify-end">
-    <p class="m-1 mr-auto p-1">Copyright 2021 Christoffer Lagerstedt</p>
-    <a href="/" class="m-1 p-1">GitHub</a>
-    <a href="/" class="m-1 p-1">LinkedIn</a>
-  </nav>
-</footer>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="The Punk Code Manifesto is a guideline to write code for ethical and sustainable web development. This includes the concept Code SLOW, trying to follow the Slow Movement but for coding."><link rel="stylesheet" href="/styles/style.css"><title>Punk Code Manifesto | Punk Code</title></head><body class="flex flex-col h-screen bg-penguin-tan dark:bg-penguin-black font-mono text-penguin-black dark:text-penguin-tan"><header class="penguin-header"><nav class="text-center py-4"><a href="/" class="with-stroke text-5xl md:text-6xl lg:text-7xl">Punk Code</a></nav></header><main class="container mx-auto p-4 flex-grow"><h1>Punk Code Manifesto</h1><p>I follow a <a href="#thepunkcode">Punk Code</a> to write <a href="#punk-code">&lt;punk-code&gt;</a>. Also, I am a believer in the <a href="https://www.slowmovement.com/">Slow Movement</a> and a proponent of <a href="#codeSLOW">Code SLOW</a>.</p><article id="thepunkcode"><h2>The Punk Code</h2>This is The Punk Code.</article><article id="punk-code"><h2>&lt;punk-code&gt;</h2>punk-code</article><article id="codeSLOW"><h2>Code SLOW</h2>Sustainable. Local. Organic. Whole.</article></main><footer class="bg-penguin-orange border-t-2 border-penguin-black dark:border-penguin-tan"><nav class="flex flex-row justify-end"><p class="m-1 mr-auto p-1">Copyright 2021 Christoffer Lagerstedt</p><a href="/" class="m-1 p-1">GitHub</a> <a href="/" class="m-1 p-1">LinkedIn</a></nav></footer></body></html>
